--- a/index.html
+++ b/index.html
@@ -101,7 +101,13 @@
                 open-source projects, or sharing my knowledge with the developer community.
               </p>
               <div class="about-cta">
-                <a href="#" class="btn primary-btn">Download CV</a>
+                <a
+                  href="https://drive.google.com/file/d/1eqrqGau155EHUtnEj3dQAzB-mHVLzJaH/view"
+                  class="btn primary-btn"
+                  target="_blank"
+                >
+                  <i class="fas fa-download"></i> Download CV
+                </a>
               </div>
             </div>
             <div class="about-stats">
